--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,7 +61,7 @@ body, html {
 }
 
 .form-desc {
-  border-bottom: 2px dotted #eeeeee;
+  border-bottom: 2px dotted #dcdbdc;
   text-align: center;
 }
 .form-desc p {
@@ -77,7 +77,7 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: 2px solid #eeeeee;
+  border: 2px solid #dcdbdc;
   color: black;
   font-size: 1em;
   margin: 1.5em 0;
@@ -99,6 +99,33 @@ label {
   color: black;
 }
 
+input {
+  border: none;
+  height: 2rem;
+  padding-left: 10px;
+  margin-right: 10px !important;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  font-size: 0.85rem;
+}
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  font-size: 0.85rem;
+}
+
+:-ms-input-placeholder {
+  /* IE 10+ */
+  font-size: 0.85rem;
+}
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  font-size: 0.85rem;
+}
+
 .highlight-red {
   color: #f5533a;
   font-weight: 600;
@@ -106,6 +133,94 @@ label {
   text-align: center;
 }
 
+.free {
+  color: #f5533a;
+  font-weight: bold;
+  font-size: inherit;
+}
+
+.line-break {
+  border-left: 1px solid #dcdbdc;
+  margin: 0px 3px;
+}
+
+.title {
+  font-size: 1.2rem;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+.title:after {
+  border-bottom: 2px solid #f5533a;
+  content: '';
+  width: 9%;
+  position: absolute;
+  display: block;
+}
+
+.title-center {
+  font-size: 1rem;
+  margin-bottom: 10px;
+  display: inline-block;
+  line-height: 3rem;
+  margin-top: 2rem;
+}
+.title-center::after {
+  border-bottom: 2px solid #f5533a;
+  content: '';
+  right: 38rem;
+  width: 10%;
+  position: absolute;
+  display: block;
+}
+
+.head-wrapper {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.header-text {
+  font-size: 1.5rem;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+
+.red {
+  color: red;
+}
+
+.center {
+  text-align: center;
+}
+
+.customNavigation {
+  color: #f5533a;
+  font-size: 3rem;
+}
+
+.custom-left {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  z-index: 1;
+}
+
+.first-owl-carousel {
+  border-bottom: 1px solid #dcdbdc;
+}
+
+.custom-right {
+  position: absolute;
+  top: 100px;
+  z-index: 1;
+  right: 0;
+}
+
+/*------------------------------*/
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -578,13 +693,9 @@ template {
 }
 #subheader ul {
   margin: 0 auto;
-  float: left;
 }
 #subheader ul li {
   display: inline-block;
-}
-#subheader ul li .active {
-  color: #f5533a;
 }
 #subheader ul li a {
   display: block;
@@ -604,12 +715,18 @@ template {
   height: 60px;
   background-color: #FFFFFF;
   font-size: 14px;
+  -webkit-box-shadow: 0px 1px 0px #dcdbdc;
+  -moz-box-shadow: 0px 1px 0px #dcdbdc;
+  -o-box-shadow: 0px 1px 0px #dcdbdc;
 }
 #navbar ul {
-  margin: 0 auto;
+  margin: 0px;
+  list-style-type: none;
+  padding: 0;
 }
 #navbar ul li {
   display: inline-block;
+  margin-top: 0px;
   padding: 0 0 0 1.5em;
 }
 #navbar ul li:first-child {
@@ -624,6 +741,7 @@ template {
   color: inherit;
   text-decoration: none;
   line-height: 57.5px;
+  /*57.5px*/
   /*padding: 0 0.5em 0 0.5em;*/
 }
 #navbar ul li a:hover {
@@ -631,10 +749,31 @@ template {
   color: #f5533a;
 }
 
-.logo {
-  width: 12%;
-  margin-top: 10px;
+.nav-wrapper {
+  width: 100%;
   display: inline-block;
+  position: relative;
+}
+
+.keranjang {
+  top: 22px;
+  right: -1px;
+  position: absolute;
+  font-size: 0.80rem;
+  text-decoration: none;
+  color: #676767;
+}
+
+.icon-keranjang {
+  position: absolute;
+  top: 20px;
+  right: 100px;
+}
+
+.logo {
+  width: 30%;
+  margin-top: 10px;
+  display: block;
   background: url(../img/kulina-logo.png) no-repeat;
   background-size: contain;
   height: 2.5rem;
@@ -656,9 +795,8 @@ template {
 }
 
 .tengah {
-  display: inline-block;
+  display: block;
   margin: 0 auto;
-  width: 100%;
   padding: 0;
   text-align: center;
 }
@@ -670,6 +808,190 @@ template {
   min-height: 636px;
 }
 
+#feature {
+  width: 100%;
+  min-height: 120px;
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #dcdbdc;
+}
+
+.feature-guarantee {
+  width: 50%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
+  margin-top: 20px;
+}
+.feature-guarantee:before {
+  width: 1px;
+  background-color: #dcdbdc;
+  content: '';
+  position: absolute;
+  height: 50px;
+  margin-top: 10px;
+}
+
+.feature-free {
+  width: 50%;
+  float: left;
+  margin-right: -100%;
+  clear: none;
+  padding-right: 0.25;
+  margin-top: 20px;
+}
+
+.feature-free-img {
+  display: inline-block;
+  float: left;
+  width: 12.5%;
+  min-height: 1px;
+  margin-right: 20px;
+}
+
+.feature-free-desc {
+  display: inline-block;
+  float: left;
+  width: 76.92308%;
+  min-height: 1px;
+  margin-top: 10px;
+}
+.feature-free-desc h4 {
+  margin: 0;
+}
+.feature-free-desc p {
+  margin-top: 5px;
+  font-size: .80em;
+  color: #676767;
+}
+
+.feature-guarantee-img {
+  display: inline-block;
+  float: left;
+  width: 12.5%;
+  min-height: 1px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.feature-guarantee-desc {
+  display: inline-block;
+  float: left;
+  width: 76.92308%;
+  min-height: 1px;
+  margin-top: 10px;
+}
+.feature-guarantee-desc h4 {
+  margin: 0;
+}
+.feature-guarantee-desc p {
+  margin-top: 5px;
+  font-size: .80em;
+  color: #676767;
+}
+
+#what-kulina {
+  width: 100%;
+  background-color: white;
+  min-height: 511px;
+  border-bottom: 1px solid #dcdbdc;
+}
+
+.what-kulina-left {
+  width: 41.66667%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 8.33333%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.what-kulina-content p {
+  font-size: 0.85rem;
+  margin-bottom: 15px;
+  line-height: 20px;
+  color: #676767;
+}
+.what-kulina-content li {
+  margin-left: 10px;
+  list-style-type: none;
+  font-size: .90rem;
+  color: #676767;
+  line-height: 2rem;
+  background: url(../img/ic-check.png) 0 50% no-repeat;
+  list-style-type: none;
+  padding-left: 30px;
+}
+
+.what-kulina-right {
+  width: 50%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
+  background: url(../img/group-7.png) no-repeat center;
+  background-size: cover;
+  height: 510px;
+}
+
+#kulina-menu {
+  height: 835px;
+  background-color: white;
+}
+
+.kulina-menu-wrapper {
+  padding: 5px;
+  margin-top: 30px;
+  position: relative;
+}
+.kulina-menu-wrapper h2 {
+  margin-top: 0;
+  text-transform: uppercase;
+}
+
+.kulina-content {
+  width: 100%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
+}
+
+.kulinacard p {
+  font-size: 0.9rem;
+  color: #f5533a;
+  margin-top: 15px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.kulinacard h4 {
+  margin-top: 0;
+  font-weight: 600;
+}
+
+#subscribe {
+  width: 100%;
+  background-color: #676767;
+  height: 160px;
+}
+
+.subscribe-content {
+  width: 100.83333%;
+  float: left;
+  margin-right: -100%;
+  clear: none;
+  padding-right: 0.25;
+  text-align: center;
+  color: white;
+  margin-top: 1.5rem;
+}
+.subscribe-content h4 {
+  margin-bottom: 5px;
+}
+
 #kulinabox {
   width: 100%;
   min-height: 300px;
@@ -677,48 +999,273 @@ template {
 
 .kulinabox-left {
   background: url("../img/group-6.png") no-repeat;
-  -sgs-span-settings: ("span": 6, "location": 1, "grid": 12, "gutter": 0.33333, "style": "fixed", "start row": true, "end row": false, "fixed gutter": true, "split gutter": null, "gutter property": "padding", "options": (null: null));
   width: 50%;
   float: left;
   margin-right: -100%;
   clear: none;
-  padding-right: 0.33333;
+  padding-right: 0.25;
   background-size: cover;
-  height: 300px;
+  min-height: 300px;
 }
 
 .kulinabox-right {
-  -sgs-span-settings: ("span": 6, "location": 7, "grid": 12, "gutter": 0.33333, "style": "fixed", "start row": false, "end row": true, "fixed gutter": true, "split gutter": null, "gutter property": "padding", "options": (null: null));
   width: 50%;
   float: right;
   margin-left: 0;
   margin-right: 0;
   clear: none;
   padding-right: 0;
-  background-color: #f5533a;
+  background-color: #f23a30;
   color: white;
-  height: 300px;
+  min-height: 300px;
+}
+
+.kulina-box-right-content {
+  margin-top: 5rem;
+  text-align: center;
+  font-size: 1.3rem;
+  display: block;
+  line-height: 1rem;
+}
+
+#kulina-advantages {
+  width: 100%;
+  min-height: 420px;
+  background-color: #f6f6f6;
+  text-align: center;
+}
+#kulina-advantages .kulina-advantages-wrap {
+  margin: 20px 10px 10px 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+#kulina-advantages .kulina-advantages-wrap p {
+  font-size: .85em;
+  margin: 0px;
+  color: #676767;
+}
+#kulina-advantages .kulina-advantages-wrap h4 {
+  margin: 10px;
+}
+
+.kulina-advantages-left {
+  width: 33.33333%;
+  float: left;
+  margin-right: -100%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-advantages-center {
+  width: 33.33333%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 33.33333%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-advantages-right {
+  width: 33.33333%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
+}
+
+#kulina-testimoni {
+  width: 100%;
+  min-height: 395px;
+  background-color: white;
+  border-bottom: 1px solid #dcdbdc;
+}
+
+.kulina-testimoni-wrapper {
+  margin: 20px 0px 0px 20px;
+  padding-top: 60px;
+  text-align: center;
+}
+.kulina-testimoni-wrapper h4 {
+  font-size: .85rem;
+}
+.kulina-testimoni-wrapper p {
+  color: #676767;
+  line-height: 1.5rem;
+  font-size: 1.1rem;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.kulina-testimoni-left {
+  width: 33.33333%;
+  float: left;
+  margin-right: -100%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-testimoni-center {
+  width: 33.33333%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 33.33333%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-testimoni-right {
+  width: 33.33333%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
+}
+
+#kulina-address {
+  padding-top: 50px;
+  width: 100%;
+  background-color: white;
+  min-height: 220px;
+}
+
+.kulina-address-wrapper {
+  height: 220px;
+  border-bottom: 1px solid #dcdbdc;
+}
+.kulina-address-wrapper address {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #676767;
+  line-height: 1.5rem;
+  font-style: normal;
+}
+.kulina-address-wrapper h4 {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.kulina-address-wrapper ul {
+  list-style-type: none;
+  line-height: 1.5rem;
+  padding: 0;
+  margin: 0;
+}
+.kulina-address-wrapper ul li {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #676767;
+}
+
+.kulina-kantor {
+  width: 25%;
+  float: left;
+  margin-right: -100%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-about {
+  width: 16.66667%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 25%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-career {
+  width: 16.66667%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 41.66667%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.kulina-bank {
+  width: 41.66667%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
+}
+
+#kulina-footer {
+  width: 100%;
+  background-color: white;
+  height: 90px;
+}
+
+.footer-wrapper {
+  padding-top: 30px;
+}
+.footer-wrapper span {
+  font-size: 0.8rem;
+  color: #676767;
+}
+.footer-wrapper a {
+  color: #adadad;
+  font-size: 1.60rem;
+  padding-left: 10px;
+}
+
+.footer-left {
+  width: 50%;
+  float: left;
+  margin-right: -100%;
+  clear: none;
+  padding-right: 0.25;
+}
+
+.footer-right {
+  width: 50%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  padding-right: 0;
 }
 
 .btn {
-  width: 100%;
   text-align: center;
   padding: 3px;
   border: none;
   text-decoration: none;
-  padding: 15px;
-  margin: 5px 0 12px 0;
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
 }
 
 .btn-primary {
+  width: 100%;
   color: white;
   background-color: #f23a30;
+  padding: 15px;
+  margin: 5px 0 12px 0;
 }
 
 .btn-secondary {
+  padding: 3px;
+  font-weight: bold;
+  font-size: .85rem;
+  width: 15rem;
+  height: 3rem;
+  margin-top: 15px;
   color: #f23a30;
   background-color: white;
+}
+
+.btn-subscribe {
+  margin-top: 15px;
+  width: 7rem;
+  padding: 3px;
+  color: white;
+  background-color: #f23a30;
+  height: 2.2rem;
 }
