--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -2,6 +2,98 @@
     color: $primaryfgColor;
     font-weight: 600;
     font-size: 0.85rem;
-    text-align: center;
+    text-align: center;   
+}
+
+.free{
+    color: $primaryfgColor;
+    font-weight: bold;
+    font-size: inherit;
+    
+   
+}
+.line-break{
+    border-left: 1px solid $grey-line;
+    margin: 0px 3px;
     
 }
+
+.title{
+    font-size: 1.2rem;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    display: inline-block;
+  
+    &:after{
+        border-bottom: 2px solid $primaryfgColor;
+        content: '';
+        width: 9%;
+        position: absolute;
+        display: block;
+    }    
+}
+.title-center{
+    font-size: 1rem;
+    margin-bottom: 10px;
+    display: inline-block;
+    line-height: 3rem;
+    margin-top: 2rem;
+  
+    &::after{
+        border-bottom: 2px solid $primaryfgColor;
+        content: '';
+        right: 38rem;
+        width: 10%;
+        position: absolute;
+        display: block;
+    }    
+}
+.head-wrapper{
+    text-align: center;
+    margin:0 auto;
+}
+
+.header-text{
+    font-size: 1.5rem;
+
+}
+.avatar{
+    width:100px;
+    height: 100px;
+    border-radius: 50px;
+}
+.red{
+    color:red;
+}
+.center{
+    text-align: center;
+}
+.customNavigation{
+    color: $primaryfgColor;
+   
+     font-size: 3rem;
+}
+.custom-left{
+    position: absolute;
+    
+    top:100px;
+    left:0;
+    z-index: 1;
+
+}  
+.first-owl-carousel{
+    border-bottom: 1px solid $grey-line;
+}     
+
+.custom-right{
+    position: absolute;
+ 
+     top:100px;
+   
+
+    z-index: 1;
+   right:0;
+    
+  
+}       
+/*------------------------------*/
