--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -8,4 +8,5 @@ $primaryfgColor : rgb(245, 83, 58);
 $primarybtnColor: rgb(242, 58, 48);
 $grey-bg :rgb(246, 246, 246);
 $grey-text :rgb(103, 103, 103);
-$grey-line :rgb(238, 238, 238)
+$grey-line :rgb(220, 219, 220);
+$grey-icon: rgb(173, 173, 173);
